<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cmu.edu.hw2rajatdem.AddEventActivity"
    tools:showIn="@layout/activity_add_event">

    <LinearLayout android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <EditText android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventHint"
            android:imeOptions="actionNext"/>

        <EditText android:id="@+id/dateTimEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timeHint"
            android:imeOptions="actionNext"/>

        <EditText android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locHint"
            android:imeOptions="actionDone"/>

        <Button android:id="@+id/saveEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Save"></Button>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
